--- a/crm-support-area.html
+++ b/crm-support-area.html
@@ -121,3 +121,129 @@
   </script>
 </body>
 </html>
+
+
+quotation:
+  company: DALAYAR Bicycle Lifestyle Co., Ltd.
+  service_name: สกูตอร์ไฟฟ้า🚀
+  job_id: JOB-2025-017
+  issue_date: 2025-10-22
+  customer:
+    name: แม่พี่ A)
+    phone: "+66 9165 5215"
+    line_oa: "@dalayar"
+    vehicle_id: DA00121Th
+    intake_photo: true
+  repair_items:
+    - id: 1
+      description: แบตเตอรรี่ 5Ah
+      quantity: 2
+      unit_price: 490
+      total: 980
+    - id: 2
+      description: ยางนอก-ในล้อหลัง
+      quantity: 1
+      unit_price: 300
+      total: 300
+    - id: 3
+      description: ยางนอก-ในล้อหน้า
+      quantity: 1
+      unit_price: 300
+      total: 300
+    - id: 4
+      description: ค่าแรงซ่อม [มาตรฐานแรงงานไทยในประเทศ]
+      quantity: 1
+      unit_price: 300
+      total: 300
+    - id: 5
+      description: สายเชื่อมแบตเตอรี่
+      quantity: 1
+      unit_price: 50
+      total: 50
+  summary:
+    subtotal: 950
+    vat: 0
+    total: 950
+  warranty:
+    battery_restoration: 30 วัน
+    rear_tire_and_cable: 30 วัน
+    certificate: PDF พร้อม QR Code ตรวจสอบย้อนหลัง
+  job_status:
+    diagnosis_complete: true
+    quotation_approved: false
+    repair_complete: false
+    certificate_issued: false
+    vehicle_delivered: false
+  remark: >
+    “ซ่อมไม่ใช่แค่แก้ปัญหา แต่คือการสร้างความมั่นใจให้กลับมาเต็มร้อย” — CeoDaraya
+{
+  "quotation": {
+    "company": "DALAYAR Bicycle Lifestyle Co., Ltd.",
+    "service_name": "สกูตอร์ไฟฟ้า🚀",
+    "job_id": "JOB-2025-017",
+    "issue_date": "2025-10-22",
+    "customer": {
+      "name": "แม่พี่ A)",
+      "phone": "+66 9165 5215",
+      "line_oa": "@dalayar",
+      "vehicle_id": "DA00121Th",
+      "intake_photo": true
+    },
+    "repair_items": [
+      {
+        "id": 1,
+        "description": "แบตเตอรรี่ 5Ah",
+        "quantity": 2,
+        "unit_price": 490,
+        "total": 980
+      },
+      {
+        "id": 2,
+        "description": "ยางนอก-ในล้อหลัง",
+        "quantity": 1,
+        "unit_price": 300,
+        "total": 300
+      },
+      {
+        "id": 3,
+        "description": "ยางนอก-ในล้อหน้า",
+        "quantity": 1,
+        "unit_price": 300,
+        "total": 300
+      },
+      {
+        "id": 4,
+        "description": "ค่าแรงซ่อม [มาตรฐานแรงงานไทยในประเทศ]",
+        "quantity": 1,
+        "unit_price": 300,
+        "total": 300
+      },
+      {
+        "id": 5,
+        "description": "สายเชื่อมแบตเตอรี่",
+        "quantity": 1,
+        "unit_price": 50,
+        "total": 50
+      }
+    ],
+    "summary": {
+      "subtotal": 950,
+      "vat": 0,
+      "total": 950
+    },
+    "warranty": {
+      "battery_restoration": "30 วัน",
+      "rear_tire_and_cable": "30 วัน",
+      "certificate": "PDF พร้อม QR Code ตรวจสอบย้อนหลัง"
+    },
+    "job_status": {
+      "diagnosis_complete": true,
+      "quotation_approved": false,
+      "repair_complete": false,
+      "certificate_issued": false,
+      "vehicle_delivered": false
+    },
+    "remark": "ซ่อมไม่ใช่แค่แก้ปัญหา แต่คือการสร้างความมั่นใจให้กลับมาเต็มร้อย — CeoDaraya"
+  }
+}
+    
