--- a/doc.SPOTWELD PRO.html
+++ b/doc.SPOTWELD PRO.html
@@ -72,3 +72,6 @@ Issued: 2025-10-24
 
 </body>
 </html>
+<p>ข้อมูล Core Feelings: <a href="../product/corefeelings.yaml">corefeelings.yaml</a></p>
+<p>มาตรฐานงานเชื่อม: <a href="../product/weldstandards.json">weldstandards.json</a></p>
+<p>ใบรับรองงานเชื่อม: <a href="../product/certificate_template.md">certificate_template.md</a></p>
